CCA: fix color of mode selector overflow fading effect
Bug: b:228796439
Test: manually
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4487479
Commit-Queue: Pi-Hsun Shih <pihsun@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1138124}

--- a/ash/webui/camera_app_ui/resources/css/main.css
+++ b/ash/webui/camera_app_ui/resources/css/main.css
@@ -228,7 +228,9 @@ body.doc-mode-reviewing #mode-selector {
 
 #mode-selector::before,
 #mode-selector::after {
-  background: linear-gradient(to right, var(--grey-900), transparent);
+  /* This is for "fading" effect when window is narrow and the mode selector
+   * overflows, so we use the same color as the background color here. */
+  background: linear-gradient(to right, var(--cros-sys-app_base), transparent);
   content: '';
   display: block;
   height: calc(100% - var(--scrollbar-height));
